--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -281,3 +281,11 @@ img.logo-img{
 .top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.filter-added{
    max-height: calc(100vh - 380px) !important; 
 }
+
+.show-all-results-outer-wrap .data-body-sec{
+  height: calc(100vh - 260px);
+}
+.custom-add-new-result-content{
+  position: fixed;
+  bottom: 30px;
+}
