--- a/findly-builder/src/app/components/actions/actions.component.html
+++ b/findly-builder/src/app/components/actions/actions.component.html
@@ -6,12 +6,12 @@
             <div class="group-radiobutton" [ngClass]="{'no-linked' : !botLinked }"> 
                 <!-- If it is no linked add this class "no-linked" or remove class -->
                 <div class="heading-title">Choose the Position of Bot Action Results</div>
-                <div class="kr-sg-radiobutton d-block">
+                <div class="kr-sg-radiobutton d-block"  (click)='topDownOrBottomUp("showTop")'>
                     <input id="radio-32" name="radio" class="radio-custom" type="radio" checked> 
                     <label for="radio-32" class="radio-custom-label">Show Actions at the Top</label>
                     <div class="info-desc">The Bot results will be positioned at the top in the chat and Full page result view</div>
                 </div> 
-                <div class="kr-sg-radiobutton d-block">
+                <div class="kr-sg-radiobutton d-block"  (click)='topDownOrBottomUp("showBottom")'>
                     <input id="radio-33" name="radio" class="radio-custom" type="radio">
                     <label for="radio-33" class="radio-custom-label">Show Actions at the Bottom</label>
                     <div class="info-desc">The Bot results will be positioned at the bottom in the chat and Full page result view</div>
@@ -25,16 +25,16 @@
 
             <div class="preview-bolock" *ngIf="botLinked" >
                 <div class="preview-heading">Preview</div>
-                <div class="display-preview-img">
+                <div class="display-preview-img" *ngIf="bottomActionsTop" >
                     <img src="assets/icons/actions/bottom-up-preview.svg">
                 </div>
                 <div class="display-preview-img">
-                    <img src="assets/icons/actions/actions-top.svg">
+                    <img *ngIf="topActionsBottom" src="assets/icons/actions/actions-top.svg">
                 </div>
-                <div class="display-preview-img">
+                <div class="display-preview-img"  *ngIf="bottomActionsBottom">
                     <img src="assets/icons/actions/actions-bottom.svg">
                 </div>
-                <div class="display-preview-img">
+                <div class="display-preview-img"  *ngIf="topActionsTop">
                     <img src="assets/icons/actions/actions-top-1.svg">
                 </div>
             </div>
