--- a/findly-builder/src/app/components/small-talk/small-talk.component.html
+++ b/findly-builder/src/app/components/small-talk/small-talk.component.html
@@ -6,7 +6,7 @@
             <div class="title-desc-text">Small Talk refers to the casual conversations that a Search app can have with the end-users. Search apps that can answer social inputs like How Are You? are more likely to create a positive impression and help build an invaluable connection with the user.</div>
             <label class="kr-sg-toggle">                                       
                 <input type="checkbox">
-                <div class="slider"><span class="enabled">Enabled</span><span class="disabled">Disabled</span></div>
+                <div class="slider"><span  *ngIf ="enable" (click)="enableST(false)" class="enabled" >Enabled</span><span (click)="enableST(true)" class="disabled">Disabled</span></div>
             </label>
         </div>
     </perfect-scrollbar>
