--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -13530,3 +13530,77 @@ button.search-button:disabled {
     padding: 8px 10px;
     border-radius: 2px;
 }
+
+.quick-actions-full-search-container {
+    margin-bottom: 23px;
+}
+#actions-full-search-container .quick-actions{
+    font-size: 12px;
+    font-weight: bold;
+    color: #9AA0A6;
+    text-transform: uppercase;
+    margin: 15px 0;
+}
+
+#actions-full-search-container .actions {
+    position: relative;
+    display : flex;
+}
+#actions-full-search-container .actions-container {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 80px rgb(0 0 0 / 7%), 0px 0px 10.0172px rgb(0 0 0 / 4%);
+    border-radius: 8px;
+    display: block !important;
+    padding: 0;
+    margin-bottom: 8px;
+    margin-right:10px;
+}
+#actions-full-search-container .action {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    background: #F5F8FA;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.138162);
+    border-radius: 4px;
+}
+#actions-full-search-container .action-icon {
+    position: absolute;
+    width: 19.17px;
+    height: 15.33px;
+    left: 6%;
+    top: calc(50% - 19px/2 - 14.5px);
+    z-index : 1
+}
+#actions-full-search-container .action-text {
+    cursor: pointer;
+    position: absolute;
+    height: 19px;
+    left: 16.22%;
+    top: calc(50% - 19px/2 - 14.5px);
+    width: 80%;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.666667px;
+    white-space: nowrap;
+    color: #161928;
+}
+#actions-full-search-container .task-text {
+    position: absolute;
+    height: 23px;
+    left: 15.95%;
+    right: 11.62%;
+    top: calc(50% - 23px/2 + 18.5px);
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 23px;
+    /* color: #161928; */
+}
