onboarding journey done

--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -11,6 +11,7 @@
     </div>
   </div> -->
   <ng-container *ngIf="!(resources && resources.length) && loadingContent1">
+    <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
     <div class="title-content">Content</div>
     <perfect-scrollbar class="scoll-empty-screen">
       <div class="empty-landing-screen">
