--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -4,6 +4,7 @@
         <span class="please-wait-message">Please Wait!</span>
     </div>
     <div class="table_sec" *ngIf="!loadingContent" >
+        <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
             <div class="seach_add_feild">
                 <div class="title">Fields</div>
                 <div class="d-flex align-items-center">
