--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -1,3 +1,5 @@
+<app-useronboarding-journey #onboard [componentType]='componentType'></app-useronboarding-journey>
+
 <div class="workbench_main_container">
   <div class="mainLoadingSpinner" *ngIf="loadingContent">
     <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
