--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -22,6 +22,7 @@
     </perfect-scrollbar>  
   </ng-container>
   <div *ngIf="nextPage">
+    <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
         <div class="faqsListContainer">
             <div class="faq-content-boxes">
                 <div class="content left-content">
