--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -6,6 +6,7 @@
   </div>
   <div class="table-list-content">
     <div class="kr-sg-data-table" *ngIf="loadingContent1">
+      <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
       <div class="header-sec col-12 row m-0">
         <div class="col-4 p-0">Synonyms</div>
 
