--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
@@ -1,18 +1,19 @@
-<div class="kr-sg-dropdowns configured-dropdown" ngbDropdown>
+<div class="kr-sg-dropdowns configured-dropdown" ngbDropdown *ngIf="showSteps">
     <div class="dropdown dropdown-open">
       <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopPropagation()">       
-          <div class="not-configured-title" *ngIf="checklistCount===6">
+          <div class="not-configured-title" *ngIf="checklistCount===7">
             <div class="title">You haven’t configured your app yet!</div>
             <div class="start-now" (click)="openOnBoardingModal()">Start Now</div>
           </div>
-          <div class="check-list-steps" *ngIf="checklistCount!=6">
+          <div class="check-list-steps" *ngIf="checklistCount!=7">
             <div class="left-sec">
-              <img src="assets/icons/check-config.svg">
-              <span class="steps-info"><b>  {{checklistCount}}</b> out of 6 Steps Completed</span>
+              <img [src]="showStatusIcon?'assets/icons/check-config.svg':'assets/icons/time.svg'">                          
+              <span class="steps-info" *ngIf="componentType=='summary'"><b>  {{checklistCount}}</b> out of 7 Steps Completed</span>
+              <span class="steps-info" *ngIf="componentType!=='summary'"><b>  Step {{checklistCount}}</b> out of 7 - Completed</span>
             </div>
             <div class="right-sec">
               <div class="checklist-btn" (click)="openOnBoardingModal()">Checklist</div>
-              <div class="close-img"><img src="assets/icons/close-checklist.svg"></div>
+              <div class="close-img" *ngIf="componentType!=='summary'" (click)="showSteps=false"><img src="assets/icons/close-checklist.svg"></div>
             </div>
           </div>
       </button>
@@ -36,7 +37,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="card_link" aria-expanded="true">
-                <div class="instruction-number">1</div>
+              <div class="instruction-number" *ngIf="tourData[0].addDataVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[0].addDataVisited">1</div>
                 <div class="guide-name">Start by Adding Data</div>              
             </div>
           </div>
@@ -53,7 +55,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="card_link" aria-expanded="true">
-                <div class="instruction-number">2</div>
+              <div class="instruction-number" *ngIf="tourData[1].indexDataVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[1].indexDataVisited">2</div>
                 <div class="guide-name">Index Data</div>              
             </div>
           </div>
@@ -70,7 +73,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="card_link" aria-expanded="true">
-                <div class="instruction-number">3</div>
+              <div class="instruction-number" *ngIf="tourData[2].optimiseSearchResultsVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[2].optimiseSearchResultsVisited">3</div>
                 <div class="guide-name">Optimize Search Results</div>              
             </div>
           </div>
@@ -87,7 +91,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse4" class="card_link" aria-expanded="true">
-                <div class="instruction-number">4</div>
+              <div class="instruction-number" *ngIf="tourData[3].designSearchExperienceVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[3].designSearchExperienceVisited">4</div>
                 <div class="guide-name">Design Search Experience</div>              
             </div>
           </div>
@@ -104,7 +109,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse5" class="card_link" aria-expanded="true">
-                <div class="instruction-number">5</div>
+              <div class="instruction-number" *ngIf="tourData[4].testAppVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[4].testAppVisited">5</div>
                 <div class="guide-name">Test the Application</div>              
             </div>
           </div>
@@ -121,7 +127,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse6" class="card_link" aria-expanded="true">
-                <div class="instruction-number">6</div>
+              <div class="instruction-number" *ngIf="tourData[5].fineTuneRelevanceVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[5].fineTuneRelevanceVisited">6</div>
                 <div class="guide-name">Fine-Tune Relevance</div>              
             </div>
           </div>
