bot actions for enable tasks toggle functionality changes

--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -1654,3 +1654,7 @@
         cursor: pointer;
     }
 }
+
+.linked-bot-task-details-container .kr-sg-checkbox .checkbox-custom + .checkbox-custom-label{
+    top: -10px;
+}
