--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -40,16 +40,16 @@
               <div class="kr-sg-checkbox p-0 ml-1 mb-0 select-all-checkbox adjust-checkbox-padding">
                   <input id="selectAllTasks" class="checkbox-custom" type="checkbox" (change)="selectAll()" [(ngModel)]="selcectionObj.selectAll">
                   <label for="selectAllTasks" class="checkbox-custom-label"></label>
-                  <span class="selected_count" *ngIf="selcectionObj && selcectionObj.selectedCount">{{selcectionObj.selectedCount}}  {{'botAction.tasksSelected' | translate}}</span>
+                  <span class="selected_count pl-3" *ngIf="selcectionObj && selcectionObj.selectedCount">{{selcectionObj.selectedCount}}  {{'botAction.tasksSelected' | translate}}</span>
               </div>
               <div class="kr-sg-checkbox p-0 ml-1 mb-0 adjust-checkbox-padding partial-select-checkbox d-none" *ngIf="selcectionObj.selectedItems.length != linkedBotTasks.length">
                   <img (click)="selectAllFromPartial()" src="assets/icons/resultranking/selected-checkbox.svg" class="search-icon">
-                  <span class="selected_count" *ngIf="selcectionObj && selcectionObj.selectedCount">{{selcectionObj.selectedCount}}  {{'botAction.tasksSelected' | translate}}</span>
+                  <span class="selected_count pl-3" *ngIf="selcectionObj && selcectionObj.selectedCount">{{selcectionObj.selectedCount}}  {{'botAction.tasksSelected' | translate}}</span>
               </div>
           </div>
           <div class="actions text-right col-8 right-sec p-0 pb-2">
-              <button id='btn_enable' class="kr-sg-button-primary btn_lg mr-2" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="enableSeletedTasks(null,true)">{{'botAction.enable'| translate}}</button>
-              <button id='btn_disable' class="kr-sg-button-danger btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="disableSeletedTasks(null,true)">{{'botAction.disable'| translate}}</button>
+              <button id='btn_enable' class="kr-sg-button-primary btn_lg mr-2" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="enableSeletedTasks()">{{'botAction.enable'| translate}}</button>
+              <button id='btn_disable' class="kr-sg-button-danger btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="disableSeletedTasks()">{{'botAction.disable'| translate}}</button>
           </div>
       </div>
       <div class="row" [ngClass]="{ 'd-none' : selcectionObj.selectedCount}">
@@ -79,7 +79,7 @@
                <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" (click)="toggleSearch(true)"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
            </div>
              <label class="kr-sg-toggle large">                                       
-               <input type="checkbox" checked>
+               <input type="checkbox"  [checked]='(isEnabledAll !== "disabled")' (click)="enableDisableTask(isEnabledAll)">
                <div class="slider"><span class="enabled w-163">Tasks Enabled</span><span class="disabled w-163">Tasks Disabled</span></div>
            </label>
             </div>
@@ -102,7 +102,7 @@
                               <input id="{{task._id}}" class="checkbox-custom selectEachTaskInput" (change)="checkUncheckTasks(task)" type="checkbox">
                               <label for="{{task._id}}" class="checkbox-custom-label"></label>
                           </div>
-                            <div><p class="bold-text" [ngClass]="{'kg-gray-text': (task.taskStatus =='Disabled')}">{{task.name}}</p>
+                            <div class=" d-inline-block"><p class="bold-text" [ngClass]="{'kg-gray-text': (task.taskStatus =='Disabled')}">{{task.name}}</p>
                               <p class="normal-text">Bot-related Task</p></div>
                           </div>
                           <div class="col-6 linked-bot-task-views-clicks-container">
