Fix for FLY-1911

--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -637,9 +637,10 @@
         // left: 69px;
         // top: 2px;
         left: 55px;
-        top: 7px;
+        top: 2px;
         font-size: 10px;
         color: #a6bdda;
+        position: absolute;
     }
     .anchor {
         cursor: pointer;
