--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -502,3 +502,31 @@ perfect-scrollbar .ps--active-y{
 .empty-scroll{
     height: calc(100vh - 62px);
 }
+.trait-count{
+    width: 22px;
+    height: 22px;
+    left: 1072px;
+    background: #F3F8FF;
+    border: 1px solid #E7F1FF;
+    box-sizing: border-box;
+    color: #9AA0A6;
+    border-radius: 50%;
+    padding: 2px;
+    font-size: 12px;
+}
+
+.trait-count-container .execute-log {
+    position: absolute;
+    padding: 15px 20px;
+    width: 265px;
+    background: #fff;
+    box-shadow: 0 0 11px rgb(0 0 0 / 10%);
+    top: -7px;
+    margin-left: 26px;
+    display: none;
+    z-index: 9999;
+}
+
+.trait-count-container .trait-count:hover .execute-log {
+    display: block;
+}
