onboarding journey done

--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -152,7 +152,7 @@
             <div class="col-3 title">{{indice.approvedfaqs}}</div>
             <div class="col-3 title">{{indice.contentPages}} Pages</div>
             <div class="col-3 title">{{indice.botActions}}</div>
-            <div class="col-3 title">{{indice.botActions}}</div>
+            <div class="col-3 title">{{indice.structuredDataCount}}</div>
           </div> 
           <!-- <div class="create_new_link" (click)="openSource()">View all</div> -->
           </div>       
