Hidden Search Configuration from side-menu.

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -231,7 +231,7 @@
 				</span>
 				<span class="linkTitle">Team Management</span>
 			</div>
-			<div class="inside-menu-title">SEARCH EXPERIENCE</div>
+			<!-- <div class="inside-menu-title">SEARCH EXPERIENCE</div>
 
 			<div mat-button class="mat-button" [routerLink]="['/searchInterface']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
 				<span class="inlineIconBox">
@@ -247,7 +247,7 @@
 					<img src="assets/icons/sidemenu/new-icons/channels.svg" class="activeIcon">
 				</span>
 				<span class="linkTitle">Search Experience</span>
-			</div>
+			</div> -->
 		</div>
 
 		<!-- <div class="status-docker" (click)="(dockService.showStatusDocker = !dockService.showStatusDocker); openStatusDocker()">
